<resources>
    <string name="app_name">PoE Currency Simulator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_socket">item socket</string>
    <string name="item_image">item image</string>
    <string name="item_link">item link</string>
    <string name="fusing_image">fusing image</string>
    <string name="used_sockets">sockets used: %d</string>
    <string name="used_fusings">fusings used: %d</string>
    <string name="chromatic_image">chromatic image</string>
    <string name="jeweller_image">jeweller image</string>
    <string name="six_link">Six-link</string>
    <string name="flasks">Flasks</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="toolbar">toolbar</string>
    <string name="transmutation_image">transmutation image</string>
    <string name="scouring_image">scouring image</string>
    <string name="augmentation_image">augmentation image</string>
    <string name="alteration_image">alteration image</string>
</resources>
