<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/fusing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/fusing_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/jeweller"
        app:srcCompat="@drawable/currency_fusing" />

    <ImageView
        android:id="@+id/jeweller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fusing"
        app:layout_constraintEnd_toStartOf="@+id/fusing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chromatic"
        app:srcCompat="@drawable/currency_jeweller"
        android:contentDescription="@string/jeweller_image" />

    <ImageView
        android:id="@+id/chromatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/jeweller"
        app:layout_constraintEnd_toStartOf="@+id/jeweller"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/currency_chromatic"
        android:contentDescription="@string/chromatic_image" />

    <TextView
        android:id="@+id/used_sockets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/jeweller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Sockets used: 0"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/used_fusings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/used_sockets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Fusings used: 0"
        android:textColor="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/toolbar"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_black_24dp" />


</android.support.constraint.ConstraintLayout>
